hcc/tests/conform/errors/sema/redefine_function.hc
//@ error: redefinition of function `F`
#include <stdlib.hh>
U0 F() {}
U0 F() {}

U0 Main() {}
